--- a/buildenv/Dockerfile.buster
+++ b/buildenv/Dockerfile.buster
@@ -1,4 +1,4 @@
-FROM ubuntu:bionic
+FROM debian:buster-slim
 
 RUN apt-get update \
 	&& apt-get install -y --no-install-recommends \
@@ -9,16 +9,14 @@ RUN apt-get update \
 	&& rm -rf /var/lib/apt/lists/*
 
 RUN wget https://cmake.org/files/v3.9/cmake-3.9.6-Linux-x86_64.sh \
-    && sh cmake-3.9.6-Linux-x86_64.sh --prefix=/usr --exclude-subdir
+    && sh cmake-3.9.6-Linux-x86_64.sh --prefix=/usr --exclude-subdir \
+    && rm -rf cmake-3.9.6-Linux-x86_64.sh
 
-COPY tdlib_header.patch /
-COPY tdlib_threadname.patch /
 
 RUN git clone https://github.com/tdlib/td.git \
     && cd td \
     && git reset --hard v1.2.0 \
-    && git apply /tdlib_header.patch \
-    && git apply /tdlib_threadname.patch \
+    # && git reset --hard v1.5.0 \
     && mkdir build \
     && cd build \
     && cmake -DCMAKE_BUILD_TYPE=Release .. \
@@ -35,11 +33,13 @@ RUN git clone https://github.com/pjsip/pjproject.git \
     && ./configure --disable-sound CFLAGS="-O3 -DNDEBUG" \
     && make dep && make && make install \
     && cd / \
-    && rm -rf pjproject
+    && rm -rf pjproject \
+    && rm -rf config_site.h 
 
 RUN git clone -n https://github.com/gabime/spdlog.git \
     && cd spdlog \
     && git checkout tags/v0.17.0 \
+    # && git checkout tags/v1.4.2 \
     && mkdir build \
     && cd build \
     && cmake -DCMAKE_BUILD_TYPE=Release -DSPDLOG_BUILD_EXAMPLES=OFF -DSPDLOG_BUILD_TESTING=OFF .. \
