Fix: build process and documentation

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@ build
 test
 .vscode
 
-# 
-docker/tg2sip/data
-!docker/tg2sip/data/.gitkeep
-docker/tg2sip/etc
-!docker/tg2sip/etc/.gitkeep
+#
+docker/data/*
+docker/etc/*
+
+!**/.gitkeep
+
