--- a/settings.ini
+++ b/settings.ini
@@ -53,6 +53,9 @@ api_hash=                       ; Application identifier hash for Telegram API a
 
 ;database_folder=               ; The path to the directory for the persistent TDLib database;
                                 ; if empty, the current working directory will be used.
+                                ; If TG2SIP_STANDARD_FOLDER env varible is set to YES on OS system
+                                ;    this field won be working, instead /var/tg2sip will be used.
+                                ;    and this file have to be on /etc/tg2sip/settings.ini
 
 ;udp_p2p=false                  ; True, if UDP peer-to-peer connections are supported
 
