--- a/settings.ini
+++ b/settings.ini
@@ -1,86 +1,119 @@
-; sample settings file
-; commented settings are optional
+# Tg2SIP setting
+# sample settings file
+# commented settings are optional
 
 [logging]
-;core=2                 ; 0-trace  2-info  4-err   6-off
-                        ; 1-debug  3-warn  5-crit
+# 0-trace  1-debug  2-info  3-warn  4-err   5-crit  6-off
+;core=2
 
-;tgvoip=5               ; same as core
-;pjsip=2                ; same as core
-;sip_messages=true      ; log sip messages if pjsip debug is enabled
+# 0-trace  1-debug  2-info  3-warn  4-err   5-crit  6-off
+;tgvoip=5
 
-;console_min_level=0    ; minimal log level that will be written into console
-;file_min_level=0       ; same but into file
+# 0-trace  1-debug  2-info  3-warn  4-err   5-crit  6-off
+;pjsip=2
 
-;tdlib=3                ; TDLib is written to file only and has its own log level values
-                        ; not affected by other log settings
-                        ; 0-fatal   2-warnings  4-debug
-                        ; 1-errors  3-info      5-verbose debug
+# log sip messages if pjsip debug is enabled
+;sip_messages=true
+
+# minimal log level that will be written into console
+;console_min_level=0
+
+# minimal log level that will be written into file
+;file_min_level=0
+
+# TDLib is written to file only and has its own log level values
+# not affected by other log settings
+# 0-fatal   1-errors   2-warnings   3-info   4-debug   5-verbose debug
+;tdlib=3
 
 [sip]
-;public_address=        ; Address to advertise as the address UDP transport.
+# Address to advertise as the address UDP transport.
+;public_address=
 
 ;stun_server=
 
 ;port=5060
-;port_range=0           ; Specify the port range for socket binding, relative to the start
-                        ; port number specified in port.
 
-;id_uri=sip:localhost   ; The Address of Record or AOR, that is full SIP URL that identifies the account.
-                        ; The value can take name address or URL format, and will look something
-                        ; like "sip:account@serviceprovider".
+# Specify the port range for socket binding, relative to the start
+# port number specified in port.
+;port_range=0
 
-;callback_uri=          ; SIP URI for TG->SIP incoming calls processing
+# The Address of Record or AOR, that is full SIP URL that identifies the account.
+# The value can take name address or URL format, and will look something
+# like "sip:account@serviceprovider".
+;id_uri=sip:localhost
 
-;raw_pcm=true           ; use L16@48k codec if true or OPUS@48k otherwise
-                        ; keep true for lower CPU consumption
+# SIP URI for TG->SIP incoming calls processing
+;callback_uri=sip:extension-to-call@ip-pbx
 
-;thread_count=1         ; Specify the number of worker threads to handle incoming RTP
-                        ; packets. A value of one is recommended for most applications.
+# use L16@48k codec if true or OPUS@48k otherwise
+# keep true for lower CPU consumption
+;raw_pcm=true
+
+# Specify the number of worker threads to handle incoming RTP
+# packets. A value of one is recommended for most applications.
+;thread_count=1
 
 [telegram]
-api_id=                         ; Application identifier for Telegram API access
-api_hash=                       ; Application identifier hash for Telegram API access
-                                ; which can be obtained at https://my.telegram.org.
+# Application identifier for Telegram API access
+# ID and Hash which can be obtained at https://my.telegram.org.
+api_id=
+api_hash=
 
-;system_language_code=en-US     ; IETF language tag of the user's operating system language
+# IETF language tag of the user's operating system language
+;system_language_code=en-US
 
-;device_model=PC                ; Model of the device the application is being run on
+# Model of the device the application is being run on
+;device_model=PC
 
-;system_version=Linux           ; Version of the operating system the application is being run on
+# Version of the operating system the application is being run on
+;system_version=Linux
 
 ;application_version=1.0
 
-;database_folder=               ; The path to the directory for the persistent TDLib database;
-                                ; if empty, the current working directory will be used.
-                                ; If TG2SIP_STANDARD_FOLDER env varible is set to YES on OS system
-                                ;    this field won be working, instead /var/tg2sip will be used.
-                                ;    and this file have to be on /etc/tg2sip/settings.ini
+# The path to the directory for the persistent TDLib database;
+# if empty, the current working directory will be used.
+# If TG2SIP_STANDARD_FOLDER env varible is set to YES on OS system
+#    this field won be working, instead /var/tg2sip will be used.
+#    and this file have to be on /etc/tg2sip/settings.ini
+;database_folder=
 
-;udp_p2p=false                  ; True, if UDP peer-to-peer connections are supported
+# True, if UDP peer-to-peer connections are supported
+;udp_p2p=false
+; acoustic echo cancellation
+# True, if connection through UDP reflectors is supported.
+;udp_reflector=true
 
-;udp_reflector=true             ; True, if connection through UDP reflectors is supported.
+## Further DSP settings will have no effect if libtgvoip is compiled with TGVOIP_NO_DSP option.
 
-; Further DSP settings will have no effect if libtgvoip is compiled with TGVOIP_NO_DSP option.
-;enable_aec=false               ; acoustic echo cancellation
-;enable_ns=false                ; noise suppression
-;enable_agc=false               ; automatic gain control
+# acoustic echo cancellation
+;enable_aec=false
 
-;use_proxy=false                ; use SOCKS5 proxy for MTProto requests
+# noise suppression
+;enable_ns=false
+
+# automatic gain control
+;enable_agc=false
+
+## use SOCKS5 proxy for MTProto requests
+;use_proxy=false
 ;proxy_address=
 ;proxy_port=0
 ;proxy_username=
 ;proxy_password=
 
-;use_voip_proxy=false           ; use SOCKS5 proxy for VoIP
+## use SOCKS5 proxy for VoIP
+;use_voip_proxy=false
 ;voip_proxy_address=
 ;voip_proxy_port=0
 ;voip_proxy_username=
 ;voip_proxy_password=
 
 [other]
-;extra_wait_time=30             ; If gateway gets temporary blocked with "Too Many Requests" reason,
-                                ; then block all outgoing telegram requests for X more seconds than was
-                                ; requested by server
+# If gateway gets temporary blocked with "Too Many Requests" reason,
+# then block all outgoing telegram requests for X more seconds than was
+# requested by server
+;extra_wait_time=30
 
-;peer_flood_time=86400          ; Seconds to wait on PEER_FLOOD
+# Seconds to wait on PEER_FLOOD
+;peer_flood_time=86400
