--- a/tg2sip.service
+++ b/tg2sip.service
@@ -1,11 +1,10 @@
 [Unit]
-Description=TG2SIP Gateway
+Description=Tg2SIP Gateway
 After=network-online.target
 Wants=network-online.target
 
 [Service]
 Type=simple
-
 # set TG2SIP_STANDARD_FOLDER to yes
 #    settings     -> /etc/tg2sip/settings.ini
 #    tg_directory -> /var/tg2sip
@@ -14,7 +13,6 @@ ExecStart=/usr/local/bin/tg2sip
 ExecReload=/bin/kill -s HUP $MAINPID
 TimeoutStartSec=0
 KillMode=process
-
 Restart=on-failure
 StartLimitBurst=3
 StartLimitInterval=60s
